# compilador-portugues

./: .gitignore  Benchmark .sh  Cargo.toml  Makefile  README.md  biblioteca_sistema.pbc  biblioteca_sistema.pr  build_production.sh  classes.pr  compile_fast.bat  compile_fast.ps1  compile_fast.sh  compile_fast_Multiplos_arquivos.sh  condicionais.pr  exemploClassesEFuncao.pr  funcao.pr  helptarget.txt  loops.pr  run_bytecode.sh  run_pr.sh  test_all.sh  test_all_examples.sh  test_compilador.sh  testar_exemplos.ps1  testar_exemplos.sh  testar_targets.bat  testar_targets.sh  teste.pr  teste_avancado.pr  teste_basico.pr  teste_completo.sh  teste_enum_neg_diferentes.pr  teste_enum_neg_membro_invalido.pr  teste_heranca.pr  teste_simples.pr  teste_simples.sh
.cargo/: config.toml
docs/: arrays.md  build-e-testes.md  classes-heranca.md  controle-fluxo.md  debug.md  enum.md  funcoes-metodos.md  interfaces.md  tipos-operadores.md
exemplos/: aritmetica.pr  biblioteca.pr  biblioteca_sistema.pr  classes.pr  condicionais.pr  funcao.pr  heranca.pr  heranca_simples.pr  interfaces_avancado.pr  interfaces_basico.pr  loops.pr  programa_principal.pr  teste.pr  teste_abstrata.pr  teste_avancado.pr  teste_enum.pr  teste_genericos_arity_neg.pr  teste_genericos_header.pr  teste_genericos_interface_heranca.pr  teste_genericos_invariancia_neg.pr  teste_genericos_metodo_retorno.pr  teste_genericos_min.pr  teste_io.pr  virtual_override.pr
src/: ast.rs  codegen.rs  inferencia_tipos.rs  interpolacao.rs  lexer.rs  lib.rs  main.rs  module_system.rs  ownership.rs  parser.lalrpop  runtime.rs  stdlib.rs  type_checker.rs
src/codegen/: bytecode.rs  cil.rs  console.rs  llvm_ir.rs  mod.rs
src/compiler/: errors.rs  namespace_resolver.rs  pipeline.rs  symbol_table.rs
src/jit/: cranelift_engine.rs  mod.rs
src/runtime/: execution_context.rs  mod.rs
tests/: bytecode_io_test.rs  examples_test.rs  helpteste.txt  integration_tests.rs  llvm_dispatch_test.rs  llvm_examples_test.rs  llvm_io_test.rs  llvm_run_examples_test.rs  output_verification.rs
tests/basicos/: app.pr  heranca.pr  polimorfismo.pr
tests/common/: mod.rs
tests/integration/: examples_test.rs
tests/test_files/: heranca.pr  simples.pr  targets_basicos.pr  todos_targets.pr
