[package]
name = "compilador-portugues"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["Adriano Severino <seu.email@exemplo.com>"]
description = "Compilador para linguagem de programação em português com múltiplos targets"
license = "MIT"

[build-dependencies]
lalrpop = "0.22.2"

[dependencies]
# Parser e Lexer
lalrpop-util = "0.22.2"
logos = "0.15.0"

# Serialização (para bytecode universal)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tratamento de erros
anyhow = "1.0"

# ✅ LLVM (corrigido - usando feature compatível com 0.6.0)
inkwell = { version = "0.6.0", features = ["llvm18-1"], optional = true }

# Chrono para timestamps no bytecode (opcional)
chrono = { version = "0.4", features = ["serde"], optional = true }

[features]
default = ["timestamps"]
llvm = ["inkwell"]
timestamps = ["chrono"]
all = ["llvm", "timestamps"]

# Configurações de compilação
[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"

# Binário principal
[[bin]]
name = "compilador"
path = "src/main.rs"

# Metadados adicionais
[package.metadata.docs.rs]
features = ["all"]
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc", "x86_64-apple-darwin"]