[package]
name = "compilador-portugues"
version = "0.1.0"
edition = "2021"
authors = ["Adriano Severino"]
description = "Compilador para linguagem de programação em português com múltiplos backends (LLVM, CIL, Console, Bytecode)"
license = "MIT"

# Dependências necessárias para o compilador e interpretador
[dependencies]
logos = "0.15.0"
lalrpop-util = { version = "0.22.2", features = ["lexer"] }
# ✅ CORREÇÃO: Adicionada a dependência do `serde` que estava faltando.
# A feature "derive" é necessária para usar `#[derive(Serialize, Deserialize)]`.
serde = { version = "1.0", features = ["derive"] }

# Dependência necessária para o processo de build do parser
[build-dependencies]
lalrpop = "0.22.2"

# Definição explícita dos dois programas (binários) do pacote
[[bin]]
name = "compilador"
path = "src/main.rs"

[[bin]]
name = "interpretador"
path = "src/bin/interpretador.rs"

# Perfis de compilação para a versão de release
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"