[package]
name = "compilador-portugues"
version = "0.1.0"
edition = "2021"
authors = ["Adriano Severino"]
description = "Compilador para linguagem de programação em português com múltiplos backends (LLVM, CIL, Console, Bytecode)"
license = "MIT"

# Dependências necessárias para o compilador e interpretador
[dependencies]
logos = "0.15.0"
lalrpop-util = { version = "0.22.2", features = ["lexer"] }
# ✅ CORREÇÃO: Adicionada a dependência do `serde` que estava faltando.
# A feature "derive" é necessária para usar `#[derive(Serialize, Deserialize)]`.
serde = { version = "1.0", features = ["derive"] }
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"

# JIT opcional (Cranelift). Mantido atrás de feature para não impactar builds padrão.
cranelift-codegen = { version = "0.104", optional = true }
cranelift-module = { version = "0.104", optional = true }
cranelift-frontend = { version = "0.104", optional = true }
cranelift-jit = { version = "0.104", optional = true }
cranelift-native = { version = "0.104", optional = true }
target-lexicon = { version = "0.12", optional = true }

# Test dependencies
[dev-dependencies]
assert_cmd = "2"
predicates = "3"

# Dependência necessária para o processo de build do parser
[build-dependencies]
lalrpop = "0.22.2"

# Definição explícita dos dois programas (binários) do pacote
[[bin]]
name = "compilador"
path = "src/main.rs"

[[bin]]
name = "interpretador"
path = "src/bin/interpretador.rs"

# Perfis de compilação para a versão de release
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[features]
# Ativa o JIT baseado em Cranelift.
jit = [
    "cranelift-codegen",
    "cranelift-module",
    "cranelift-frontend",
    "cranelift-jit",
    "cranelift-native",
    "target-lexicon",
]
